<resources>
    <string name="app_name">Уведомитель</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_task">Задать дело</string>
    <string name="create_task_and_title">Задайте дело и его заголовок</string>
    <string name="title">Title</string>
    <string name="task">Task</string>
    <string name="create">Задать</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="message">Message</string>
    <string name="create_notify">Задать будильник</string>
    <string name="notificator">Будильник</string>
    <string name="list_of_tasks">Список дел</string>
    <string name="manager_title">Менеджер времени</string>
    <string name="timer">Таймер</string>
    <string name="second">second</string>
    <string name="start_timer">Запуск</string>
    <string name="stop">Стоп</string>
    <string name="end_timer">Таймер отработал</string>
    <string name="notification">Уведомление</string>
    <string name="success_removed">Successfully removed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="success">Success!</string>
    <string name="fill_out_all_fields">Fill out all fields!</string>
    <string name="start">Start</string>
    <string name="reset">reset</string>
    <string name="seconder">Секундомер</string>
</resources>