<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494848"
    tools:context=".fragments.countdowntimer.CountDownTimeFragment">

    <LinearLayout
        android:id="@+id/linearLayoutTimes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="65dp"
        android:background="#C3BCBC"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edHourTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/hour"
            android:inputType="time" />

        <EditText
            android:id="@+id/edMinuteTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/minute"
            android:inputType="time" />

        <EditText
            android:id="@+id/edSecondTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/second"
            android:inputType="time" />

    </LinearLayout>

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:background="#C3BCBC"
        android:gravity="center"
        android:textSize="45sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btStartStop"
        app:layout_constraintEnd_toEndOf="@+id/btStartStop"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/btStartStop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/btStartStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#FF9800"
        android:text="@string/start_timer"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>